RESOLVED FIXED298498
[Navigation API] Fix 16% PLT regression by removing Sync IPC
https://bugs.webkit.org/show_bug.cgi?id=298498
Summary [Navigation API] Fix 16% PLT regression by removing Sync IPC
rupin
Reported 2025-09-06 01:53:11 PDT
[Navigation API] Fix 16% PLT regression by removing Sync IPC
Attachments
Radar WebKit Bug Importer
Comment 1 2025-09-06 01:53:19 PDT
rupin
Comment 2 2025-09-06 01:56:36 PDT
rupin
Comment 3 2025-09-10 14:32:38 PDT
EWS
Comment 4 2025-09-11 10:08:15 PDT
Committed 299858@main (c0ca2b2a9f47): <https://commits.webkit.org/299858@main> Reviewed commits have been landed. Closing PR #50566 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.