Source/WebCore/history/BackForwardController.h
@@ -75,7 +75,6 @@ public:
     WEBCORE_EXPORT RefPtr<HistoryItem> forwardItem(std::optional<FrameIdentifier> = std::nullopt);
 
     Vector<Ref<HistoryItem>> allItems();
-    Vector<Ref<HistoryItem>> itemsForFrame(FrameIdentifier);
     Vector<Ref<HistoryItem>> reachableItemsForFrame(FrameIdentifier);
 
 private:
